# mbutil

./: LICENSE.md  README.md  pyproject.toml  setup.py
mbutil/: __init__.py  cli.py
mbutil.egg-info/: PKG-INFO  SOURCES.txt
